bk_ida/gccida/c1/set_nonincremental_init
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_nonincremental_init/src/c-typeck.c:6515:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_nonincremental_init/src/c-typeck.c:6530:19: error: expected expression
v5 = ( tree_node *)*( &global_trees + 17); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_nonincremental_init/src/c-typeck.c:6530:8: error: use of undeclared identifier 'tree_node'
v5 = ( tree_node *)*( &global_trees + 17); 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_nonincremental_init/src/obj/c-typeck.o] Error 1
